--- a/index.html
+++ b/index.html
@@ -28,12 +28,11 @@
 
 <title>Casino Games Malta </title>
 
-
     <!--Java-->
 <script>
     
     //loign alertbox
-function alertbox(){
+    function alertbox(){
     var login= document.getElementById("login").value;
     alert("You are logged-in");
 }
@@ -89,8 +88,6 @@ function openBackgorund(){
   window.open("https://media.istockphoto.com/vectors/jackpot-gambling-game-bright-banner-with-winning-vector-id833511764?k=20&m=833511764&s=612x612&w=0&h=0jYySycGi997VvAl2W1fgVBjqyxxAJU4oXxxIAu0PYQ=")
 }
 
-
-
   </script>
 </head>
 
@@ -140,32 +137,6 @@ function openBackgorund(){
       <!--Home page-->
 <div id="home"> 
   <a href="#home">  <h2 class="title">Home Page</h2> </a>
-
-
-<!--Carousel-->
-<div class ="slide">
-  <div><img src="images/banner.png" class="slideimages" alt="poker"></div>
-  <div><img src="images/banner1.png" class="slideimages" alt="free roll"></div>
-  <div><img src="images/banner2.png" class="slideimages" alt="sports"></div>
-</div>
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script src="slick-master/slick-master/slick/slick.js"></script>
-
-
-<script>
-    $(document).ready(function(){
-    $('.slide').slick({ 
-        infinite: true,
-        slidesToShow: 1,
-        slidesToScroll: 1,
-        autoplay: true,
-
-    });
-
-});
-
-</script>
-</div>
 
 <!--Games Section-->
 <div id="games"> 
@@ -233,8 +204,8 @@ function openBackgorund(){
   </div>
     <!--Game 7-->  
     <div class="gms" onclick="openBackgorund()">
-      <img src="images/game7.png" alt="dogs house" class="imagestry">
-      <p>The Dogs House</p>
+      <img src="images/game7.png" alt="dog house" class="imagestry">
+      <p>The Dog House</p>
       <div class="middle">
         <div class="text">Try Game</div>   
     </div>
@@ -242,23 +213,12 @@ function openBackgorund(){
 
     <!--Game 8--> 
     <div class="gms"  onclick="openBackgorund()"> 
-      <img src="images/game8.png" alt="Chiw Heat" class="imagestry"> 
-      <p>Chiw Heat</p>
+      <img src="images/game8.png" alt="Chilli Heat" class="imagestry"> 
+      <p>Chilli Heat</p>
       <div class="middle">
         <div class="text">Try Game</div> 
     </div>
   </div>
-</div>
-
-<div id="todaygame"> 
-<h4 id="today">Todays Top Money </h4>  
-<div class="gms" id="g9"  onclick="openBackgorund()"> 
-  <img src="images/game9.png" alt="Empire Fortune" class="imagestry"> 
-  <p>Empire Fortune</p> 
-  <div class="middle">
-    <div class="text">Try Game</div>
-</div>
-</div>
 </div>
 
 <!--About Us-->
